test/files/neg/macro-invalidusage-expands-to-apply-a.check
Macros_Test_2.scala:7: error: too many arguments for constructor C: ()C
  class D extends Foo(2)
                  ^
one error found
